<resources>
    <string name="app_name">VigHealth</string>
    <string name="at_nuevo_usuario">Nuevo usuario</string>
    <string name="et_nombre_usuario">Nombre</string>
    <string name="et_apellidos_usuario">Apellidos</string>
    <string name="et_edad_usuario">Edad</string>
    <string name="et_peso_usuario">Peso(kg)</string>
    <string name="et_altura_usuario">Altura(m)</string>
    <string name="sp_genero">Género</string>
    <string name="btn_guardar_datos">Guardar datos</string>
    <string name="et_sistolica_alta">Sistólica(Alta)</string>
    <string name="et_diastolica_baja">Diastólica(baja)</string>
    <string name="at_nuevo_registro_tension">Nuevo registro de tensión</string>
    <string name="tv_ultimos_registros">Últimos registros</string>
    <string name="at_historial_tension">Historial de tensión</string>
    <string name="btn_fecha_tension_desde">Desde…</string>
    <string name="et_fecha_inicial_tension">Fecha inicial de consulta</string>
    <string name="btn_fecha_tension_hasta">Hasta…</string>
    <string name="et_fecha_final_tension">Fecha final de consulta</string>
    <string name="btn_consultar_H_Tension">Consultar</string>
    <string name="tv_grafrica_tension">Gráfrica:Tensión</string>
    <string name="et_fecha_final_grafico">Fecha final gráfico</string>
    <string name="et_fecha_inicial_grafico">Fecha inicial gráfico</string>
    <string name="tv_nuevo_medicamento">Nuevo medicamento</string>
    <string name="et_nombre_del_medicamento">Nombre del medicamento</string>
    <string name="et_dosis">Dosis</string>
    <string name="sp_medida">Medida</string>
    <string name="et_periodicidad">¿Cada cuantas horas?(número)</string>
    <string name="et_comentarios">Comentarios…</string>
    <string name="btn_med_aceptar">Aceptar</string>
    <string name="btn_med_cancelar">Cancelar</string>
    <string name="at_lista_medicamentos">Mis Medicamentos</string>
    <string name="at_mod_medicamento">Modificar Medicamento</string>
    <string name="btn_ed_modificar">Modificar</string>
    <string name="at_peso_seguimiento">Nuevo registro de peso</string>
    <string name="at_peso_historial">Historial de peso</string>
    <string name="at_peso_grafico">Gráfico de evolución del peso</string>
    <string name="at_hidratacion">Hidratación </string>
    <string name="at_detalle_actividad">Detalle Actividad</string>
    <string name="et_peso">Peso(kg)</string>
    <string name="btn_nuevo_peso">Guardar nuevo registro</string>
    <string name="tv_registros_peso">Últimos registros</string>
    <string name="tv_grafica_peso">Gráfica:Peso</string>
    <string name="at_lista_actividad">Mis Actividades</string>
    <string name="at_alergias">Alergias</string>
    <string name="at_editar_tension">Editar registro tensión</string>
    <string name="at_editar_peso">Editar registro peso</string>
    <string name="at_configuracion">Ajustes y configuración</string>
    <string name="at_nuevo_medicamento">Nuevo medicamento</string>
    <string-array name="genero">
        <item>Género</item>
        <item>Hombre</item>
        <item>Mujer</item>
        <item>No binario</item>
        <item>Sin genero</item>
        <item>Otro</item>
    </string-array>
    <string-array name="medida">
        <item>Medida</item>
        <item>Pastilla</item>
        <item>Sobre</item>
        <item>gr</item>
        <item>mg</item>
        <item>ml</item>
        <item>Cucharada</item>
        <item>Inyeccion</item>
        <item>Gotas</item>
        <item>Untura(pomada)</item>
    </string-array>
    <string-array name="frecuencia">
        <item>1 hora</item>
        <item>2 horas</item>
        <item>3 horas</item>
        <item>4 horas</item>
    </string-array>
    <string-array name="alergenos">
        <item>Abedul</item>
        <item>Olivo</item>
        <item>Gramíneas</item>
        <item>Ambrosía</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="btn_generar_G_Tension">Generar gráfico</string>
    <string name="btn_nueva_tension">Guardar nuevo registro</string>
    <string name="tv_IMC_indicador">IMC:</string>
    <string name="btn_generar_G_Peso">Generar gráfico</string>
    <string name="swtEstadoHid">Activar recordatorio</string>
    <string name="tv_frecuencia_hid">Frecuencia</string>
    <string name="btn_guardar_record_hid">Guardar recordatorio</string>
    <string name="btn_modificar_record_hid">Modificar recordatorio</string>
    <string name="btn_eliminar_record_hid">Eliminar recordatorio</string>
    <string name="btn_user_ed_ok">Guardar cambios</string>
    <string name="btn_cancel_ed_us">Cancelar</string>
    <string name="tv_ed_nombre">Nombre</string>
    <string name="tv_ed_apellidos">Apellidos</string>
    <string name="btn_modificar_tension">Modificar</string>
    <string name="btn_eliminar_tension">Eliminar</string>
    <string name="btn_editar_peso">Editar registro</string>
    <string name="btn_eliminar_peso">Eliminar registro</string>
    <string name="tv_datos_personales">Datos personales</string>
    <string name="hint_datos_personales">Pulsar para cambiar tus datos personales</string>
    <string name="tv_borrar_datos">Borrar datos</string>
    <string name="hint_borrar_datos">Pulsar para borrar todos los datos de la aplicación</string>
    <string name="tv_cerrar_sesion">Cerrar sesión</string>
    <string name="hint_cerrar_sesion">Pulsar para cerrar tu sesión</string>
    <string name="tv_alergeno">Alergeno</string>
    <string name="btn_consultar_alergia">Consultar</string>
    <string name="tv_pronostico">Pronostico</string>
    <string name="tv_etiqueta_distancia">Distancia</string>
    <string name="tv_ritmo_inicial">-:--</string>
    <string name="tv_etiqueta_ritmo">Ritmo(min/km)</string>
    <string name="tv_granos_m3">granos/m3</string>
    <string name="tv_nivel_concentracion">Nivel:</string>
    <string name="tv_drawer_vighealth">VigHealth</string>
</resources>