<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarTensionActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120sp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_fechaRegistroTension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="Fecha del registro: 11/03/2023 18:12"/>

        <EditText
            android:id="@+id/etEd_sistolica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:hint="@string/et_sistolica_alta"
            android:inputType="numberDecimal"
            android:textColorHint="#78909C"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/etEd_diastolica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="10sp"
            android:hint="@string/et_diastolica_baja"
            android:inputType="numberDecimal"
            android:textColorHint="#78909C"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_editarTension"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="10sp"
            android:layout_gravity="center"
            android:backgroundTint="@color/bluePrime"
            android:text="@string/btn_modificar_tension"
            android:textColor="#616161"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_eliminarTension"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="10sp"
            android:layout_gravity="center"
            android:backgroundTint="@color/bluePrime"
            android:text="@string/btn_eliminar_tension"
            android:textColor="#616161"
            android:textSize="30sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>