<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softBlue"
    tools:context=".EditarUsuarioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/tv_ed_nombre"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/tvNombreUsuario"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNombreUsuario"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130sp"
        android:ems="10"
        tools:text="Jose Antonio"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/tv_ed_apellidos"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/tvApellidosUsuario"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvApellidosUsuario"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:ems="10"
        android:textSize="35sp"
        android:textAlignment="center"
        tools:text="Cabeza Sanchez"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreUsuario" />

    <Spinner
        android:id="@+id/spEdGenero"
        android:layout_width="142dp"
        android:layout_height="62dp"
        android:layout_marginTop="454dp"
        android:entries="@array/genero"
        android:prompt="@string/sp_genero"
        android:hint="@string/sp_genero"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toEndOf="@+id/tiEdAltura"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEdAltura"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/blackGS"
        app:boxStrokeWidth="3sp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/etEdAlturaUsuario"
        android:layout_width="128dp"
        android:layout_height="63dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="454dp"
        android:autofillHints="Introduzca su altura"
        android:ems="10"
        android:hint="@string/et_altura_usuario"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
         />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEdEdad"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/blackGS"
        app:boxStrokeWidth="3sp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/etEdEdadUsuario"
        android:layout_width="128dp"
        android:layout_height="62dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="338dp"
        android:autofillHints="Introduzca su edad"
        android:ems="10"
        android:hint="@string/et_edad_usuario"
        android:inputType="number"
        android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEdPeso"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/blackGS"
        app:boxStrokeWidth="3sp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toEndOf="@+id/tiEdEdad"
        app:layout_constraintTop_toTopOf="parent" >

    <EditText
        android:id="@+id/etEdPesoUsuario"
        android:layout_width="142dp"
        android:layout_height="62dp"
        android:layout_marginTop="338dp"
        android:autofillHints="Introduzca su peso"
        android:ems="10"
        android:hint="@string/et_peso_usuario"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
       />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEditarUsuario"
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_marginBottom="144dp"
        android:text="@string/btn_user_ed_ok"
        android:textSize="20sp"
        android:backgroundTint="@color/blackGS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCanecelarEditar"
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="30sp"
        android:text="@string/btn_cancel_ed_us"
        android:textSize="20sp"
        android:backgroundTint="@color/blackGS"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarUsuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>