<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPesoActivity">

    <LinearLayout
        android:id="@+id/linLayEdPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_fechaRegistroPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55sp"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="Fecha del registro: 11/03/2023 18:12"/>

        <EditText
            android:id="@+id/etEdPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_peso"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btnEditarPeso"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100sp"
            android:backgroundTint="@color/pinky"
            android:text="@string/btn_editar_peso"
            android:textColor="#616161"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnEliminarPeso"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:backgroundTint="@color/pinky"
            android:text="@string/btn_eliminar_peso"
            android:textColor="#616161"
            android:textSize="28sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>